--- a/WooCommerce/Classes/ViewRelated/Orders/OrderSearchViewController.xib
+++ b/WooCommerce/Classes/ViewRelated/Orders/OrderSearchViewController.xib
@@ -24,21 +24,21 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ncr-u2-zVd" userLabel="Borders View" customClass="BordersView" customModule="WooCommerce" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="70" width="375" height="1"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="bottomVisible" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </view>
                 <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="cOC-iR-MJr">
-                    <rect key="frame" x="8" y="14" width="297" height="56"/>
+                    <rect key="frame" x="8" y="20" width="297" height="56"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="CeV-H5-n3x"/>
                     </connections>
                 </searchBar>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YBC-g3-0LP">
-                    <rect key="frame" x="308" y="24.5" width="51" height="33"/>
+                    <rect key="frame" x="308" y="30.5" width="51" height="33"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <state key="normal" title="Button"/>
                     <connections>
@@ -46,7 +46,7 @@
                     </connections>
                 </button>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="y9n-QI-xEB">
-                    <rect key="frame" x="0.0" y="71" width="375" height="596"/>
+                    <rect key="frame" x="0.0" y="76" width="375" height="591"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="qvh-01-20Z"/>
@@ -56,19 +56,19 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="cOC-iR-MJr" firstAttribute="bottom" secondItem="Ncr-u2-zVd" secondAttribute="bottom" id="A3E-fX-OKH"/>
                 <constraint firstItem="l4O-t2-oPf" firstAttribute="trailing" secondItem="Ncr-u2-zVd" secondAttribute="trailing" id="Af1-Kn-ttP"/>
                 <constraint firstItem="y9n-QI-xEB" firstAttribute="leading" secondItem="l4O-t2-oPf" secondAttribute="leading" id="CiP-i6-rg3"/>
                 <constraint firstItem="l4O-t2-oPf" firstAttribute="trailing" secondItem="YBC-g3-0LP" secondAttribute="trailing" constant="16" id="Dvf-RD-FUS"/>
                 <constraint firstItem="YBC-g3-0LP" firstAttribute="centerY" secondItem="cOC-iR-MJr" secondAttribute="centerY" constant="-1" id="JLs-22-kWd"/>
-                <constraint firstItem="y9n-QI-xEB" firstAttribute="top" secondItem="cOC-iR-MJr" secondAttribute="bottom" constant="1" id="QMH-4a-wFC"/>
+                <constraint firstItem="y9n-QI-xEB" firstAttribute="top" secondItem="cOC-iR-MJr" secondAttribute="bottom" id="QMH-4a-wFC"/>
                 <constraint firstItem="l4O-t2-oPf" firstAttribute="trailing" secondItem="y9n-QI-xEB" secondAttribute="trailing" id="VSS-q1-BvR"/>
-                <constraint firstItem="cOC-iR-MJr" firstAttribute="top" secondItem="l4O-t2-oPf" secondAttribute="top" constant="-6" id="c7h-ay-W2D"/>
-                <constraint firstItem="y9n-QI-xEB" firstAttribute="top" secondItem="Ncr-u2-zVd" secondAttribute="bottom" id="eqX-8X-hKS"/>
+                <constraint firstItem="cOC-iR-MJr" firstAttribute="top" secondItem="l4O-t2-oPf" secondAttribute="top" id="c7h-ay-W2D"/>
                 <constraint firstItem="Ncr-u2-zVd" firstAttribute="leading" secondItem="l4O-t2-oPf" secondAttribute="leading" id="h0G-Xc-ogd"/>
                 <constraint firstItem="YBC-g3-0LP" firstAttribute="leading" secondItem="cOC-iR-MJr" secondAttribute="trailing" constant="3" id="nSK-Od-9bp"/>
                 <constraint firstItem="l4O-t2-oPf" firstAttribute="bottom" secondItem="y9n-QI-xEB" secondAttribute="bottom" id="rig-yz-o3K"/>
                 <constraint firstItem="cOC-iR-MJr" firstAttribute="leading" secondItem="l4O-t2-oPf" secondAttribute="leading" constant="8" id="uzQ-AI-YZl"/>
-                <constraint firstItem="Ncr-u2-zVd" firstAttribute="top" secondItem="cOC-iR-MJr" secondAttribute="bottom" id="vuY-pt-mhn"/>
+                <constraint firstItem="Ncr-u2-zVd" firstAttribute="top" secondItem="chb-2b-70h" secondAttribute="top" id="vuY-pt-mhn"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <viewLayoutGuide key="safeArea" id="l4O-t2-oPf"/>
